# RAG

./: README.md
rag_embeddings/: pyproject.toml
rag_embeddings/src/: rag.ipynb  vendor_matching.ipynb
