[tool.poetry]
name = "rag-embeddings"
version = "0.1.0"
description = ""
authors = ["Francisco <francisco.meyo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ipykernel = "^6.25.0"
matplotlib = "^3.8.0"
langchain = {version = ">=0.0.332", extras = ["llms"]}
openai = "0.27.7"
tiktoken = "0.4.0"
python-dotenv = "^1.0.0"
pymupdf = "^1.23.4"
pinecone-client = "^5.0.1"
pyairtable = "^2.0" 
pandas = "^2.2.3"
numpy = "<2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
